syntax = "proto2";

package login;

enum ErrorCode {
    SUCCESS = 0;    // 成功
    ABNORMAL = 1;   // 服务器异常

    ERR_EXPIRE_TOKEN = 101; // 认证超时
    ERR_INVALID_TOKEN = 102;  // 无效的 token 
}

// LoginAuthReq 认证请求
message LoginAuthReq {
    optional uint64 account_id = 1;     // 账号 ID 
    // ...
    optional string token = 15;         // token 
}

// LoginAuthRsp 认证应答
message LoginAuthRsp {
    optional ErrorCode err_code = 1;     // 错误码
    optional uint64 player_id = 2;      // 游戏用户 ID 
}